--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "dotenv": "16.0.3",
     "ejs": "3.1.8",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "nodemon": "2.0.20"
+    "nodemon": "^3.0.3"
   }
 }
